[gd_scene load_steps=2 format=3 uid="uid://cwkn7bfghetkq"]

[ext_resource type="Script" uid="uid://d3eo4iqbxgkbc" path="res://scripts/admin_survey_viewer.gd" id="1_4vokp"]

[node name="AdminSurveyViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -52.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vokp")

[node name="AccessPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AccessPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="AccessPanel/VBoxContainer"]
layout_mode = 2
text = "Enter Admin Code"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="AccessPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter code here"

[node name="AccessButton" type="Button" parent="AccessPanel/VBoxContainer"]
layout_mode = 2
text = "Access Admin Panel"

[node name="BackButton" type="Button" parent="AccessPanel/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Survey Responses"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="RefreshButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SurveyList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
